--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 plugins {
     alias(libs.plugins.android.application)
+    alias(libs.plugins.hilt)
 }
 
 android {
     namespace 'com.app.merabillstask'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.app.merabillstask"
         minSdk 21
-        targetSdk 34
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
@@ -26,6 +27,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+ /*   kapt {
+        correctErrorTypes true
+    }*/
 }
 
 dependencies {
@@ -37,4 +42,7 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    implementation libs.hilt.android
+    annotationProcessor libs.hilt.compiler
 }
