--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     alias(libs.plugins.android.application)
-    alias(libs.plugins.hilt)
 }
 
 android {
@@ -10,6 +9,7 @@ android {
     defaultConfig {
         applicationId "com.app.merabillstask"
         minSdk 21
+        //noinspection EditedTargetSdkVersion
         targetSdk 35
         versionCode 1
         versionName "1.0"
@@ -28,9 +28,6 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
- /*   kapt {
-        correctErrorTypes true
-    }*/
 }
 
 dependencies {
@@ -42,7 +39,4 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-
-    implementation libs.hilt.android
-    annotationProcessor libs.hilt.compiler
 }
