--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    buildFeatures {
+        dataBinding = true
+    }
 }
 
 dependencies {
@@ -39,4 +41,7 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    //gson
+    implementation 'com.google.code.gson:gson:2.12.1'
 }
